# drawing

./: .gitignore  canny_edge.py  draw.py  main.py  prompt.py  pyproject.toml
